results/SpecGenBench/2-shot/log-BubbleSortDesc-2023_11_28_07_28_03.txt
public class BubbleSortDesc { 
    //@ requires array != null;
    //@ ensures (\forall int i; 0 <= i && i < array.length-1; array[i] >= array[i+1]);
    void swap(int x, int y,  int array[]) {
        int temp;     
        temp = array[x];
        array[x] = array[y];
        array[y] = temp;
    }

    //@ requires arr != null;
    //@ ensures \result != null && \result.length == arr.length;
    //@ ensures (\forall int i; 0 <= i && i < \result.length-1; \result[i] >= \result[i+1]);
    int[] bubbleSort(int arr[]) {
        int n = arr.length;

        for (int i = 0; i < n-1; i++) {	
            //@ maintaining 0 <= i && i <= n-1;
            //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int j; 0 <= j && j < n-k-1; arr[j] >= arr[j+1]));
            //@ decreases n-1 - i;
            for (int j = 0; j < n-i-1; j++) {
                if (arr[j+1] > arr[j]) {  
		     swap(j, j + 1, arr); 
                } 
	    }
	} 
	return arr;
    } 
}
/home/max/Documents/JMLGPT/tmp/BubbleSortDesc.java:19: error: variable j is already defined in method bubbleSort(int[])
            //@ maintaining (\forall int k; 0 <= k && k < i; (\forall int j; 0 <= j && j < n-k-1; arr[j] >= arr[j+1]));
                                                                          ^
1 error

